#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([testopengl], [0.1], [lpz2@163.com])

AC_CONFIG_SRCDIR([main.cpp])
AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE()
# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

#fix: automake: no `Makefile.am' found for any configure output
AC_CONFIG_FILES([Makefile]) 
AC_OUTPUT
